dynamodel_tests/tests/ui/fails/not_a_struct.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
enum NotAStruct {
    VariantA(i32),
    VariantB(String),
    VariantC(Vec<String>),
}

fn main() {}
